--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<title>TVS Phamacy</title>
 </head>
 <body>
-	<!--
+	
 <div id="splash">
 <img src="img/logo.png" alt="" class="logo">
 </div>
--->
+
 <div class="content">
 		<header class="app-header">
 			<div class="container">
@@ -85,6 +85,10 @@ Find Store
 </li>
 </ul>
 </footer>
-
+<script>
+    setTimeout(() => {
+        document.getElementById('splash').classlist.add('fade');
+    }, 2000);
+</script>
 </body>
 </html>
