complete/ comment out splash

--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 	<title>TVS Phamacy</title>
 </head>
 <body>
-	
+	<!--
 <div id="splash">
-<img src="img/logo.png" alt="" class="logo">
-</div>
+			<img class="logo" src="img/logo.png" alt="" />
+		</div>
+        -->
+		<div class="content">
+			<header class="app-header">
+				<div class="container">
+					<img class="logo" src="img/logo.png" alt="" />
+					<input class="search" type="text" placeholder="Search..." />
+				</div>
+			</header>
 
-<div class="content">
-		<header class="app-header">
-			<div class="container">
-				<img src="img/logo.png" alt="" class="logo">
-				<input type="text" class="search"
-                    placeholder="search...">
-            </div>
-		</header>
-		<div class="subheader">
-			<div>
-				<p>Now Delivering Rx & More</p>
-				<p>Find out now <i class="fa fa-chevron-right"></i></p>
+			<div class="subheader">
+				<div>
+					<p>Now delivering Rx + more</p>
+					<p>Find out now <i class="fa fa-chevron-right"></i></p>
+				</div>
+				<img src="img/delivery.png" alt="" />
 			</div>
-			<img src="img/delivery.png" alt="">
-        </div>
+
 			<div class="grid container">
-			<div class="item">
-				<h4>pharmacy</h4>
-				<p>2Rxs ready to refill</p>
-				<img src="img/medicine.png" alt="">
-            </div>
-            </div>
+				<div class="item">
+					<h4>Pharmacy</h4>
+					<p class="desc">2Rxs ready for refill</p>
+					<img src="img/medicine.png" alt="" />
+				</div>
 				<div class="item">
 					<h4>Deals & Rewards</h4>
 					<p class="desc">2 TraversyCare offers expiring</p>
@@ -63,32 +63,31 @@
 					<p class="desc">View your weekly ad</p>
 					<img src="img/newspaper.png" alt="" />
 				</div>
-        </div>
-</div>
+			</div>
+		</div>
 
-<footer class="app-footer">
-<ul>
-<li><i class="fa fa-heart"></i>
-Home
-</li>
-<li>
-<i class="fa fa-barcode"></i>
-Show Card
-</li>
-<li>
-<i class="fa fa-user"></i>
-Account
-</li>
-<li>
-<i class="fa fa-map-marker"></i>
-Find Store
-</li>
-</ul>
-</footer>
+		<footer class="app-footer">
+			<ul>
+				<li>
+					<i class="fa fa-heart"></i>
+					Home
+				</li>
+				<li>
+					<i class="fa fa-barcode"></i>
+					Show Card
+				</li>
+				<li>
+					<i class="fa fa-user"></i>
+					Account
+				</li>
+				<li>
+					<i class="fa fa-map-marker"></i>
+					Find Store
+				</li>
+			</ul>
+		</footer>
 <script>
-    setTimeout(() => {
-        document.getElementById('splash').classlist.add('fade');
-    }, 2000);
+
 </script>
 </body>
 </html>
